# fieldmap

./: Cargo.toml  README.md
fieldmap/: Cargo.toml
fieldmap-derive/: Cargo.toml
fieldmap-derive/src/: lib.rs  utils.rs
fieldmap/examples/: readme_1.rs
fieldmap/src/: lib.rs
fieldmap/tests/: auto_impl.rs  auto_impl_non_static.rs  auto_impl_tuple.rs  compile.rs  hand_impl.rs  hand_impl_non_static.rs
