[package]
name = "fieldmap-derive"
version = "0.1.0"
authors = ["frozenlib"]
license = "MIT/Apache-2.0"
repository = "https://github.com/frozenlib/fieldmap"
documentation = "https://docs.rs/fieldmap/"
keywords = ["compile-time"]
categories = ["rust-patterns"]
description = "Derive macro for fieldmap crate."
exclude = [".vscode/*"]
edition = "2021"


[lib]
proc-macro = true

[dependencies]
syn = "1.0.86"
quote = "1.0.15"
proc-macro2 = "1.0.36"
